# echo-list

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: index.html
echolist/: __main__.py  config.py  gui.py  manager.py  naming.py  safe_write.py  store.py  tags.py
tests/: conftest.py  test_gui.py  test_manager.py  test_safe_write.py  test_write_guard.py
